# Plater

./: .gitignore  Bitmap.cpp  Bitmap.h  CMakeLists.txt  LICENSE  Part.cpp  Part.h  PlacedPart.cpp  PlacedPart.h  Placer.cpp  Placer.h  Plate.cpp  Plate.h  README.md  Rectangle.cpp  Request.cpp  Request.h  Solution.cpp  Solution.h  Triangle.cpp  Triangle.h  main.cpp  util.h
gui/: .gitignore  Makefile  about.cpp  about.h  about.ui  gui.pro  gui.pro.user.2.5pre1  gui.rc  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  platesviewer.cpp  platesviewer.h  platesviewer.ui  viewer.cpp  viewer.h  wizard.cpp  wizard.h  wizard.ui  worker.cpp  worker.h
modelFile/: intpoint.h  modelFile.cpp  modelFile.h
plater/: Bitmap.cpp  CMakeLists.txt  Line.cpp  Line.h  Lines.cpp  Lines.h  Part.cpp  Part.h  PlacedPart.cpp  PlacedPart.h  Placer.cpp  Placer.h  Plate.cpp  Plate.h  QuadTree.cpp  QuadTree.h  Rectangle.cpp  Rectangle.h  Request.cpp  Request.h  Solution.cpp  Solution.h  Triangle.cpp  Triangle.h  floatpoint.h  log.cpp  log.h  main.cpp  sleep.cpp  sleep.h  util.cpp  util.h  wingetopt.cpp
plater/modelFile/: README.md  modelFile.cpp  modelFile.h
plater/stl/: Face.cpp  Face.h  Model.cpp  Model.h  Point3.cpp  Point3.h  StlFactory.cpp  StlFactory.h  Volume.cpp  Volume.h
tools/: dxf2dxf.sh
